# off-chain-bundle-examples

./: README.md  foundry.toml
basic/: Cargo.toml
basic/app/: Cargo.toml  build.rs
basic/app/src/: bundle.rs  main.rs
basic/contracts/src/: Basic.sol  BasicOnlySearch.sol  BasicOnlySettle.sol
basic/contracts/test/: Basic.t.sol
basic/crates/bindings/: basic.rs  basic_only_search.rs  basic_only_settle.rs  basic_test.rs  common_base.rs  console.rs  console_2.rs  ds_test.rs  i_multicall_3.rs  ierc165.rs  ierc20.rs  ierc721.rs  ierc721_enumerable.rs  ierc721_metadata.rs  ierc721_token_receiver.rs  mock_erc20.rs  mock_erc721.rs  mod.rs  safeconsole.rs  script_base.rs  shared_types.rs  std_assertions.rs  std_chains.rs  std_cheats.rs  std_error.rs  std_invariant.rs  std_json.rs  std_math.rs  std_storage.rs  std_storage_safe.rs  std_style.rs  test.rs  test_base.rs  vm.rs  vm_safe.rs
basic/crates/bindings/src/: basic.rs  basic_only_search.rs  basic_only_settle.rs  lib.rs  mock_erc20.rs  mock_erc721.rs
blind-backrun/: Cargo.toml  Makefile
blind-backrun/contracts/src/: BlindBackrun.sol  BlindBackrunExecutor.sol  BlindBackrunFlashloan.sol  BlindBackrunLogic.sol  TokenForTesting.sol
blind-backrun/contracts/test/: BlindBackrun.t.sol
blind-backrun/crates/bindings/: components.rs  console.rs  console_2.rs  counter.rs  counter_script.rs  counter_test.rs  ds_test.rs  mod.rs  script.rs  shared_types.rs  std_cheats_safe.rs  std_error.rs  std_json.rs  std_math.rs  std_storage.rs  std_storage_safe.rs  std_utils.rs  test.rs  vm.rs  vm_safe.rs
cache/: solidity-files-cache.json
(+3 files in other folders)
